tree-sitter-usfm3/grammar.js
    bookcode: $ => /\w{3}/,
     // bookcode: $ => choice("GEN", "EXO", "LEV", "NUM", "DEU", "JOS", "JDG",
     //          "RUT", "1SA", "2SA", "1KI", "2KI", 
     //          "1CH", "2CH", "EZR", "NEH", "EST", "JOB", "PSA", "PRO", 
     //          "ECC", "SNG", "ISA", "JER", "LAM", "EZK", "DAN", 
     //          "HOS", "JOL", "AMO", "OBA", "JON", "MIC", "NAM", "HAB", 
     //          "ZEP", "HAG", "ZEC", "MAL", "MAT", "MRK", "LUK", 
     //          "JHN", "ACT", "ROM", "1CO", "2CO", "GAL", "EPH", "PHP", 
     //          "COL", "1TH", "2TH", "1TI", "2TI", "TIT", "PHM", 
     //          "HEB", "JAS", "1PE", "2PE", "1JN", "2JN", "3JN", "JUD", 
     //          "REV", "TOB", "JDT", "ESG", "WIS", "SIR", "BAR", 
     //          "LJE", "S3Y", "SUS", "BEL", "1MA", "2MA", "3MA", "4MA", 
     //          "1ES", "2ES", "MAN", "PS2", "ODA", "PSS", "EZA", 
     //          "5EZ", "6EZ", "DAG", "PS3", "2BA", "LBA", "JUB", "ENO", 
     //          "1MQ", "2MQ", "3MQ", "REP", "4BA", "LAO", "FRT", 
     //          "BAK", "OTH", "INT", "CNC", "GLO", "TDX", "NDX", "TOB",
     //          "JDT", "ESG", "WIS", "SIR", "BAR", "LJE", "S3Y", 
     //          "SUS", "BEL", "1MA", "2MA", "3MA", "4MA", "1ES", "2ES", 
     //          "MAN", "PS2", "ODA", "PSS", "EZA", "5EZ", "6EZ", 
     //          "DAG", "PS3", "2BA", "LBA", "JUB", "ENO", "1MQ", "2MQ", 
     //          "3MQ", "REP", "4BA", "LAO", "FRT", "BAK", "OTH", 
     //          "INT", "CNC", "GLO", "TDX", "NDX", "XXA", "XXB", "XXC", 
     //          "XXD", "XXE", "XXF", "XXG"),
    text: $ => /[^\\\|]+/,
    _text: $ => /[^\\\|]+/,
    _spaceOrLine: $ => /[\s\n\r]/,

    // File Identification
    book: $ => $.id, //only at start of file
    description: $ => $._text,
    id: $ => prec.right(0, seq("\\id ", $.bookcode, optional($.description))),

    //numbered marker levels
    numberedLevelMax3: $ => token.immediate(/[123]/),
    numberedLevelMax4: $ => token.immediate(/[1234]/),
    numberedLevelMax5: $ => token.immediate(/[12345]/),
    versionNumber: $ => /\d+(\.\d+)?/,

    _headingText: $ => repeat1(choice($.text,
      $._characterMarker,
      $.ref,
      $.footnote,
      $.crossref,
      $.fig,
      )),


    usfm: $ => seq("\\usfm ", $.versionNumber),
    tocBlock: $ => prec.right(0,repeat1($.toc)),
    toc: $ => prec.right(0,seq($.tocTag, $._headingText)),
    tocTag: $ => seq("\\toc",optional($.numberedLevelMax3), " "),
    _introText: $ => repeat1(choice($.text, $.iqt,
      $.xt_standalone,
      $._characterMarker,
      $.fig,
      $.ref,
      )),

    ip: $ => prec.right(0, seq("\\ip ", $._introText)),
    ipr: $ => prec.right(0, seq("\\ipr ", $._introText)),
    verseText: $ => prec.right(0, repeat1(choice($.text,
      $._characterMarker, $.fig
      ))),
    v: $ => prec.right(0,seq("\\v ", $.verseNumber, repeat($._verseMeta))),
    verseNumber: $ => /\d+\w?(-\d+\w?)?[\s\n\r]*/,

    _verseMeta: $ => choice(
      $.va,
      $.vp,
    ),
    chapter: $ => prec.right(0,seq(
        optional($.cl),
        $.c,
        repeat($._chapterContent)
      )),
    c: $ => prec.right(0,seq("\\c ", $.chapterNumber, repeat($._chapterMeta))),
    chapterNumber: $ => /\d+/,

    // When vid is independent marker and not attribute in USFM
    _chapterContent: $ => choice(
      $._chapterMeta,
      $.title,
      $.paragraph,
      $._comments,
      $.poetry,
      $.table,
      $.list,
      $.footnote,
      $.pb,
      $.ip,
      $.iex,
      $.milestone,
      $.zNameSpace,
      $.esb,
      $.vid,
    ),

    //chapter meta
    _chapterMeta: $ => choice(
      $.ca,
      $.cp,
      $.cd,
      $.cl
    ),
    title: $ => choice(
      $.msBlock,
      $.sBlock,
      $.sp,
      $.d,
      $.sdBlock,
      $.r,
      $.mteBlock,
      $.qa,
    ),

    mtBlock: $ => prec.right(0,repeat1($.mt)),
    mt: $ => prec.right(0,seq($.mtTag, $._headingText)),
    mtTag: $ => seq("\\mt",optional($.numberedLevelMax4), " "),

    mteBlock: $ => prec.right(0,repeat1($.mte)),
    mte: $ => prec.right(0, seq($.mteTag, $._headingText)),
    mteTag: $ => seq("\\mte",optional(token.immediate(/[12]/)), " "),

    msBlock: $ => prec.right(0, repeat1($.ms)),
    ms: $ => prec.right(0, seq($.msTag, $._headingText, optional($.mr))),
    msTag: $ => seq("\\ms",optional($.numberedLevelMax3), " "),
    mr: $ => prec.right(0,seq("\\mr ", $._headingText)),

    sBlock: $ => prec.right(0, repeat1($.s)),
    s: $ => prec.right(0, seq($.sTag, $._headingText, repeat(choice($.sr, $.r)) )),
    sTag: $ => seq("\\s",optional($.numberedLevelMax5), " "),
    sr: $ => prec.right(0,seq("\\sr ", $._headingText)),
    r: $ => prec.right(0, seq("\\r ", $._headingText)), // ocurs under c too

    sdBlock: $ => prec.right(0, repeat1($.sd)),
    sd: $ => seq($.sdTag),
    sdTag: $ => seq("\\sd", optional($.numberedLevelMax4), $._spaceOrLine),
    // rqMarker implemented in cross ref section 

    // paragraph
    paragraph: $ => choice(
      $.p,
      $.m,
      $.po,
      $.pr,
      $.cls,
      $.pmo,
      $.pm,
      $.pmc,
      $.pmr,
      $.piBlock,
      $.mi,
      $.nb,
      $.pc,
      $.phBlock,
      $.b,
    ),

    _paragraphContent: $ => choice(
      $.v,
      $._verseMeta,
      $.verseText,
      $.footnote, 
      $.crossref,
      $.milestone,
      $.zNameSpace,
      $._comments,
      $.ref,
    ),

    p: $ => prec.right(0, seq("\\p", $._spaceOrLine, repeat($._paragraphContent))),
    m: $ => prec.right(0, seq("\\m", $._spaceOrLine, repeat($._paragraphContent))),
    po: $ => prec.right(0, seq("\\po", $._spaceOrLine, repeat($._paragraphContent))),
    pr: $ => prec.right(0, seq("\\pr", $._spaceOrLine, repeat($._paragraphContent))),
    cls: $ => prec.right(0, seq("\\cls", $._spaceOrLine, repeat($._paragraphContent))),
    pmo: $ => prec.right(0, seq("\\pmo", $._spaceOrLine, repeat($._paragraphContent))),
    pm: $ => prec.right(0, seq("\\pm", $._spaceOrLine, repeat($._paragraphContent))),
    pmc: $ => prec.right(0, seq("\\pmc", $._spaceOrLine, repeat($._paragraphContent))),
    piBlock: $ => prec.right(0, repeat1($.pi)),
    pi: $ => prec.right(0, seq($.piTag, repeat($._paragraphContent))),
    piTag: $ => seq("\\pi", optional($.numberedLevelMax3), $._spaceOrLine),
    mi: $ => prec.right(0, seq("\\mi", $._spaceOrLine, repeat($._paragraphContent))),
    nb: $ => prec.right(0, seq("\\nb", $._spaceOrLine, repeat($._paragraphContent))),
    pc: $ => prec.right(0, seq("\\pc", $._spaceOrLine, repeat($._paragraphContent))),
    b: $ => seq("\\b", $._spaceOrLine),

    //quotes
    poetry: $ => prec.right(0, repeat1(choice(
      $.qBlock,
      $.qr,
      $.qc,
      // $.qs,
      // $.qa, //treated as a title
      // $.qac,
      $.qmBlock,
      $.qd,
    ))),

    _poetryContent: $ => choice(
      $._paragraphContent,
      $.qac,
      $.qs,
    ),

    qBlock: $ => prec.right(0, repeat1($.q)),
    q: $ => prec.right(0, seq($.qTag, repeat($._poetryContent))),
    qTag: $ => seq("\\q", optional($.numberedLevelMax4), $._spaceOrLine),
    _characterMarker: $ => choice(
      $.add,
      $.bk,
      $.dc,
      $.k,
      $.nd,
      $.ord,
      $.pn,
      $.png,
      $.addpn,
      $.qt,
      $.sig,
      $.sls,
      $.tl,
      $.wj,
      $.em,
      $.bd,
      $.it,
      $.bdit,
      $.no,
      $.sc,
      $.sup,
      $.ndx,
      $.pro,
      $.rb,
      $.w,
      $.wg,
      $.wh,
      $.wa,
      $.wl,
      $.jmp,
      $.ta,
//      $.fig,
      // $.zNameSpace, makes all zNameSpaces part of paragraph content, like milestones
    ),
