tree-sitter-usfm3/test/corpus/test5_titles_n_paragraphs.txt
================================================================================
headers and titles
================================================================================
\id MAT 41MATGNT92.SFM, Good News Translation, June 2003
\usfm 3.0
\toc1 The Acts of the Apostles
\toc2 Acts
\mt1 THE ACTS
\mt2 of the Apostles
\c 1
\ms BOOK ONE
\mr (Psalms 1–41)
\s True Happiness
\p
\v 1 ക്രിസ്തുയേശുവിന്റെ ബദ്ധനായ ...
\s1 The Thirty Wise Sayings
\sr (22.17--24.22)
\r (Mark 1.1-8; Luke 3.1-18; John 1.19-28)
\p
\v 2 നമ്മുടെ പിതാവായ ...
\sd2
\p
\v 3 കർത്താവായ യേശുവിനോടും ...
\v 4 The Son was made greater than the angels, just as the name that God gave him is greater than theirs.
\v 5 For God never said to any of his angels,
\mte2 The End of the Gospel according to
\mte1 John 
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (usfm
    (versionNumber))
  (tocBlock
    (toc
      (tocTag
        (numberedLevelMax3))
      (text))
    (toc
      (tocTag
        (numberedLevelMax3))
      (text)))
  (mtBlock
    (mt
      (mtTag
        (numberedLevelMax4))
      (text))
    (mt
      (mtTag
        (numberedLevelMax4))
      (text)))
  (chapter
    (c
      (chapterNumber))
    (title
      (msBlock
        (ms
          (msTag)
          (text)
          (mr
            (text)))))
    (title
      (sBlock
        (s
          (sTag)
          (text))))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))
    (title
      (sBlock
        (s
          (sTag
            (numberedLevelMax5))
          (text)
          (sr
            (text))
          (r
            (text)))))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))
    (title
      (sdBlock
        (sd
          (sdTag
            (numberedLevelMax4)))))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))))
    (title
      (mteBlock
        (mte
          (mteTag)
          (text))
        (mte
          (mteTag)
          (text))))))

================================================================================
Simple p
================================================================================
\id MAT 41MATGNT92.SFM, Good News Translation, June 2003
\usfm 3.0
\toc1 The Acts of the Apostles
\toc2 Acts
\ip One of these brothers, Joseph, had become...
\ipr (50.24)
\c 1
\s1 The Preaching of John the Baptist
\r (Matthew 3.1-12; Luke 3.1-18; John 1.19-28)
\p
\v 1 This is the Good News about Jesus Christ, the Son of God.
\v 2 It began as the prophet Isaiah had written:
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (usfm
    (versionNumber))
  (tocBlock
    (toc
      (tocTag
        (numberedLevelMax3))
      (text))
    (toc
      (tocTag
        (numberedLevelMax3))
      (text)))
  (ip
    (text))
  (ipr
    (text))
  (chapter
    (c
      (chapterNumber))
    (title
      (sBlock
        (s
          (sTag
            (numberedLevelMax5))
          (text)
          (r
            (text)))))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))))))

================================================================================
m
================================================================================
\id GEN
\c 1
\p
\v 35 As Jesus was teaching in the Temple, he asked the question, “How can the teachers
of the Law say that the Messiah will be the descendant of David?
\v 36 The Holy Spirit inspired David to say:
\q1 ‘The Lord said to my Lord:
\q2 Sit here at my right side
\q2 until I put your enemies under your feet.’
\b
\m
\v 37 David himself called him ‘Lord’; so how can the Messiah be David's descendant?”
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))))
    (poetry
      (qBlock
        (q
          (qTag
            (numberedLevelMax4))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax4))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax4))
          (verseText
            (text)))))
    (paragraph
      (b))
    (paragraph
      (m
        (v
          (verseNumber))
        (verseText
          (text))))))

================================================================================
po
================================================================================
\id GEN
\c 1
\po
\v 1 From Paul, a servant of Christ Jesus and an apostle chosen and called by God to
preach his Good News.
\p
\v 2 The Good News was promised long ago by God through his prophets, as written in the
Holy Scriptures.
\v 3 It is about his Son, our Lord Jesus Christ: as to his humanity, he was born a
descendant of David;
\v 4 as to his divine holiness, he was shown with great power to be the Son of God by being
raised from death.
\v 5 Through him God gave me the privilege of being an apostle for the sake of Christ,
in order to lead people of all nations to believe and obey.
\v 6 This also includes you who are in Rome, whom God has called to belong to Jesus Christ.
\po
\v 7 And so I write to all of you in Rome whom God loves and has called to be his own
people:
\po May God our Father and the Lord Jesus Christ give you grace and peace.
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (paragraph
      (po
        (v
          (verseNumber))
        (verseText
          (text))))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))))
    (paragraph
      (po
        (v
          (verseNumber))
        (verseText
          (text))))
    (paragraph
      (po
        (verseText
          (text))))))

================================================================================
pr
================================================================================
\id GEN
\c 1
\p
\v 15 “ ‘God's curse on anyone who makes an idol of stone, wood, or metal and secretly
worships it; the Lord hates idolatry.’
\pr “And all the people will answer, ‘Amen!’
\p
\v 16 “ ‘God's curse on anyone who dishonors his father or mother.’
\pr “And all the people will answer, ‘Amen!’
\p
\v 17 “ ‘God's curse on anyone who moves a neighbor's property line.’
\pr “And all the people will answer, ‘Amen!’

--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))
    (paragraph
      (pr
        (verseText
          (text))))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))
    (paragraph
      (pr
        (verseText
          (text))))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))
    (paragraph
      (pr
        (verseText
          (text))))))

================================================================================
cls
================================================================================
\id GEN
\c 1
\p
\v 18 With my own hand I write this:. Do not forget my chains!
\cls May God's grace be with you.
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))
    (paragraph
      (cls
        (verseText
          (text))))))

================================================================================
pmo, pm and pmc
================================================================================
\id GEN
\c 1
\p
\v 22 The apostles, the leaders, and all the church members decided to send some men to
Antioch along with Paul and Barnabas. They chose Silas and Judas Barsabbas, who were two
leaders of the Lord's followers.
\v 23 They wrote a letter that said:
\pmo We apostles and leaders send friendly greetings to all of you Gentiles who are
followers of the Lord in Antioch, Syria, and Cilicia.
\pm
\v 24 We have heard that some people from here have terribly upset you by what they said.
But we did not send them!
\v 25 So we met together and decided to choose some men and to send them to you along with
our good friends Barnabas and Paul.
\v 26 These men have risked their lives for our Lord Jesus Christ.
\v 27 We are also sending Judas and Silas, who will tell you in person the same things that
we are writing.
\pm
\v 28 The Holy Spirit has shown us that we should not place any extra burden on you.
\v 29 But you should not eat anything offered to idols. You should not eat any meat that
still has the blood in it or any meat of any animal that has been strangled. You must also
not commit any terrible sexual sins. If you follow these instructions, you will do well.
\pmc We send our best wishes.
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))))
    (paragraph
      (pmo
        (verseText
          (text))))
    (paragraph
      (pm
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))))
    (paragraph
      (pm
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))))
    (paragraph
      (pmc
        (verseText
          (text))))))

================================================================================
pi mi
================================================================================
\id GEN
\c 1
\s1 Jesus Explains the Story about the Weeds
\p
\v 36 After Jesus left the crowd and went inside, his disciples came to him and said,
“Explain to us the story about the weeds in the wheat field.”
\p
\v 37 Jesus answered:
\pi The one who scattered the good seed is the Son of Man.
\v 38 The field is the world, and the good seeds are the people who belong to the kingdom.
The weed seeds are those who belong to the evil one,
\v 39 and the one who scattered them is the devil. The harvest is the end of time, and
angels are the ones who bring in the harvest.
\pi
\v 16 You people are like children sitting in the market and shouting to each other,
\b
\q1
\v 17 “We played the flute,
\q2 but you would not dance!
\q1 We sang a funeral song,
\q2 but you would not mourn!”
\b
\mi
\v 18 John the Baptist did not go around eating and drinking, and you said, “That man has
a demon in him!”
\v 19 But the Son of Man goes around eating and drinking, and you say, “That man eats and
drinks too much! He is even a friend of tax collectors ...
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (title
      (sBlock
        (s
          (sTag
            (numberedLevelMax5))
          (text))))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))
    (paragraph
      (piBlock
        (pi
          (piTag)
          (verseText
            (text))
          (v
            (verseNumber))
          (verseText
            (text))
          (v
            (verseNumber))
          (verseText
            (text)))
        (pi
          (piTag)
          (v
            (verseNumber))
          (verseText
            (text)))))
    (paragraph
      (b))
    (poetry
      (qBlock
        (q
          (qTag
            (numberedLevelMax4))
          (v
            (verseNumber))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax4))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax4))
          (verseText
            (text)))
        (q
          (qTag
            (numberedLevelMax4))
          (verseText
            (text)))))
    (paragraph
      (b))
    (paragraph
      (mi
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))))))

================================================================================
nb
================================================================================
\id GEN
\c 7
\p
\v 52 Then they said, “Nicodemus, you must be from Galilee! Read the Scriptures, and you
will find that no prophet is to come from Galilee.”
\s1 A Woman Caught in Sin
\p
\v 53 Everyone else went home,
\c 8
\nb
\v 1 but Jesus walked out to the Mount of Olives.
\v 2 Then early the next morning he went to the temple. The people came to him, and he
sat down and started teaching them.
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))
    (title
      (sBlock
        (s
          (sTag
            (numberedLevelMax5))
          (text))))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text)))))
  (chapter
    (c
      (chapterNumber))
    (paragraph
      (nb
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))))))

================================================================================
pc
================================================================================
\id GEN
\c 1
\p
\v 4 The woman was dressed in purple and scarlet robes, and she wore jewelry made of
gold, precious stones, and pearls. In her hand she held a gold cup filled with the filthy
and nasty things she had done.
\v 5 On her forehead a mysterious name was written:
\pc I AM THE GREAT CITY OF BABYLON, THE MOTHER OF EVERY IMMORAL AND FILTHY THING ON EARTH.
\m
\v 6 I could tell that the woman was drunk on the blood of God's people who had given
their lives for Jesus. This surprising sight amazed me, ...
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))))
    (paragraph
      (pc
        (verseText
          (text))))
    (paragraph
      (m
        (v
          (verseNumber))
        (verseText
          (text))))))
